src/test/ui/consts/const-eval/const-eval-overflow2.stderr
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:16:6
   |
LL | / const VALS_I8: (i8,) =
LL | |     (
LL | |      i8::MIN - 1,
   | |      ^^^^^^^^^^^ attempt to subtract with overflow
LL | |      );
   | |_______-
   |
note: lint level defined here
  --> $DIR/const-eval-overflow2.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:22:6
   |
LL | / const VALS_I16: (i16,) =
LL | |     (
LL | |      i16::MIN - 1,
   | |      ^^^^^^^^^^^^ attempt to subtract with overflow
LL | |      );
   | |_______-

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:28:6
   |
LL | / const VALS_I32: (i32,) =
LL | |     (
LL | |      i32::MIN - 1,
   | |      ^^^^^^^^^^^^ attempt to subtract with overflow
LL | |      );
   | |_______-

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:34:6
   |
LL | / const VALS_I64: (i64,) =
LL | |     (
LL | |      i64::MIN - 1,
   | |      ^^^^^^^^^^^^ attempt to subtract with overflow
LL | |      );
   | |_______-

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:40:6
   |
LL | / const VALS_U8: (u8,) =
LL | |     (
LL | |      u8::MIN - 1,
   | |      ^^^^^^^^^^^ attempt to subtract with overflow
LL | |      );
   | |_______-

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:45:6
   |
LL | / const VALS_U16: (u16,) = (
LL | |      u16::MIN - 1,
   | |      ^^^^^^^^^^^^ attempt to subtract with overflow
LL | |      );
   | |_______-

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:50:6
   |
LL | / const VALS_U32: (u32,) = (
LL | |      u32::MIN - 1,
   | |      ^^^^^^^^^^^^ attempt to subtract with overflow
LL | |      );
   | |_______-

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:56:6
   |
LL | / const VALS_U64: (u64,) =
LL | |     (
LL | |      u64::MIN - 1,
   | |      ^^^^^^^^^^^^ attempt to subtract with overflow
LL | |      );
   | |_______-

error: aborting due to 8 previous errors

